feat: create crud for user